--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 <script>
   // Your web app's Firebase configuration
-  var firebaseConfig = {
+  /*var firebaseConfig = {
     apiKey: "AIzaSyBqlbARyGqPiTneQxCvmh2crOzea7xYLiE",
     authDomain: "storm-17170.firebaseapp.com",
     databaseURL: "https://storm-17170.firebaseio.com",
@@ -35,6 +35,16 @@
     messagingSenderId: "764927214121",
     appId: "1:764927214121:web:f071cee9c160bf7c955238",
     measurementId: "G-CN7M1N13ZJ"
+  };*/
+  var firebaseConfig = {
+    apiKey: "AIzaSyBGCfVjWVyTAdS_-MQGsQEWyWUQF1wtd2E",
+    authDomain: "stormindustriediensten.firebaseapp.com",
+    databaseURL: "https://stormindustriediensten.firebaseio.com",
+    projectId: "stormindustriediensten",
+    storageBucket: "stormindustriediensten.appspot.com",
+    messagingSenderId: "268045999204",
+    appId: "1:268045999204:web:8395ba79930d096e955371",
+    measurementId: "G-WKGK5MCFBM"
   };
   // Initialize Firebase
   firebase.initializeApp(firebaseConfig);
